--- a/Notebook/Jupyter/path/MatplotlibTraining.ipynb
+++ b/Notebook/Jupyter/path/MatplotlibTraining.ipynb
@@ -8,7 +8,7 @@
     "# Matplotlibのトレーニング♨\n",
     "\n",
     "## [目次](TableOfContents.ipynb)\n",
-    "- [準備](#準備)\n",
+    "- [環境準備](#環境準備)\n",
     "  - [インストール](#インストール)\n",
     "  - [インポート](#インポート)\n",
     "  - [jupyter上で利用するとき](#jupyter上で利用するとき)\n",
@@ -19,10 +19,10 @@
     "  - [散布図](#散布図)\n",
     "  - [散布図行列](#散布図行列)\n",
     "  - [ヒートマップ](#ヒートマップ)\n",
-    "  - [二次元プロット](#二次元プロット)\n",
-    "    - [三次関数グラフ](#三次関数グラフ)\n",
-    "    - [三角関数グラフ](#三角関数グラフ)\n",
-    "  - [三次元プロット](#三次元プロット)\n",
+    "  - [2次元プロット](#2次元のプロット)\n",
+    "    - [3次関数グラフ](#3次関数グラフ)\n",
+    "    - [3角関数グラフ](#3角関数グラフ)\n",
+    "  - [3次元プロット](#3次元のプロット)\n",
     "  \n",
     "## 参考\n",
     "開発基盤部会 Wiki\n",
@@ -34,11 +34,10 @@
    "cell_type": "markdown",
    "id": "c3cbfe23-a666-4ac1-8790-fd097d812745",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
-    "## 準備\n",
+    "## 環境準備\n",
     "プロキシ環境の場合などについては、[コチラ](PythonTraining.ipynb)をご参照ください。"
    ]
   },
@@ -131,7 +130,6 @@
    "cell_type": "markdown",
    "id": "629affed-9d2d-4b98-aede-7f101e339ec5",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -228,7 +226,6 @@
    "cell_type": "markdown",
    "id": "b25be509-ee23-4a23-a868-51c99d8ed488",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -293,7 +290,6 @@
    "cell_type": "markdown",
    "id": "ebed5eab-31a1-4f9b-90b6-aa480b664adf",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -595,7 +591,6 @@
    "cell_type": "markdown",
    "id": "09d634d7-db4a-4e79-bccc-8b4c94ee7ae9",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -678,7 +673,6 @@
    "cell_type": "markdown",
    "id": "ceb8fd33-34ba-4f32-b246-2412c2079591",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -746,7 +740,6 @@
    "cell_type": "markdown",
    "id": "f7c631aa-e993-468b-b76b-2b00c81f8044",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -831,7 +824,6 @@
    "cell_type": "markdown",
    "id": "4313949f-c540-4fa9-89da-c5ed60c49a05",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -947,7 +939,6 @@
    "cell_type": "markdown",
    "id": "9aff696f-5b25-4d1d-b7e4-afc0437c0729",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -957,7 +948,9 @@
   {
    "cell_type": "markdown",
    "id": "86abfeaa-c59e-446f-98b1-35fa708758c1",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "#### 準備\n",
     "インポート"
