--- a/Notebook/Jupyter/path/NumPyTraining2.ipynb
+++ b/Notebook/Jupyter/path/NumPyTraining2.ipynb
@@ -9,11 +9,12 @@
     "行列（→ [配列（ベクトル）](NumPyTraining1.ipynb)）。\n",
     "  \n",
     "## [目次](TableOfContents.ipynb)\n",
-    "- [準備](#準備)\n",
+    "- [環境準備](#環境準備)\n",
     "- [操作](#操作)\n",
     "  - [生成](#生成)\n",
     "  - [コピー](#コピー)\n",
     "  - [表示](#表示)\n",
+    "- [計算](#計算)\n",
     "  - [算術計算](#算術計算)\n",
     "  - [統計計算](#統計計算)\n",
     "- [アクセス](#アクセス)\n",
@@ -36,7 +37,7 @@
    "id": "4793a63e-553c-48cf-8ea0-1d52c544fa36",
    "metadata": {},
    "source": [
-    "## [準備](NumPyTraining1.ipynb)"
+    "## [環境準備](NumPyTraining1.ipynb)"
    ]
   },
   {
@@ -309,6 +310,14 @@
    "outputs": [],
    "source": [
     "a.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "005bd116-b380-4a0f-a4a9-30af7c4a27a9",
+   "metadata": {},
+   "source": [
+    "## 計算"
    ]
   },
   {
