--- a/Notebook/Jupyter/path/NumPyTraining3.ipynb
+++ b/Notebook/Jupyter/path/NumPyTraining3.ipynb
@@ -9,7 +9,7 @@
     "[配列（ベクトル）](NumPyTraining1.ipynb) <---> [行列](NumPyTraining2.ipynb)\n",
     "\n",
     "## [目次](TableOfContents.ipynb)\n",
-    "- [準備](#準備)\n",
+    "- [環境準備](#環境準備)\n",
     "- [型の変換](#型の変換)\n",
     "  - [要素の型の変換](#要素の型の変換)\n",
     "  - [LISTやDF等の型へ変換](#LISTやDF等の型へ変換)\n",
@@ -42,7 +42,7 @@
    "id": "4793a63e-553c-48cf-8ea0-1d52c544fa36",
    "metadata": {},
    "source": [
-    "## [準備](NumPyTraining1.ipynb)"
+    "## [環境準備](NumPyTraining1.ipynb)"
    ]
   },
   {
