--- a/Notebook/Jupyter/path/ScikitLearnTraining0.ipynb
+++ b/Notebook/Jupyter/path/ScikitLearnTraining0.ipynb
@@ -911,6 +911,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "105b1aa6-a42c-4e82-aa62-c7db7e979615",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 平均\n",
+    "print(x.mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54c7e3ad-cb19-414f-a14a-5a02e03f64d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 標準偏差\n",
+    "print(x.std())"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "17557f04-24dd-4eb5-aeff-6d432adec18d",
    "metadata": {
@@ -929,7 +951,7 @@
    "source": [
     "ss = StandardScaler()\n",
     "# 引数は numpy.ndarray\n",
-    "x = ss.fit_transform(x)"
+    "sx = ss.fit_transform(x)"
    ]
   },
   {
@@ -948,7 +970,7 @@
    "outputs": [],
    "source": [
     "# 平均が ≒ 0\n",
-    "print(x.mean())"
+    "print(sx.mean())"
    ]
   },
   {
@@ -959,7 +981,7 @@
    "outputs": [],
    "source": [
     "# 標準偏差が ≒ 1\n",
-    "print(x.std())"
+    "print(sx.std())"
    ]
   },
   {
@@ -967,8 +989,20 @@
    "id": "ae154764-c2a6-4900-8d36-59463f7f514b",
    "metadata": {},
    "source": [
-    "###### 正規化\n",
-    "..."
+    "###### 正規化"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8bdd2548-0e2c-4d39-b59a-933ad05c710b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "mms = MinMaxScaler(feature_range=(0, 1))\n",
+    "# 引数は numpy.ndarray\n",
+    "mmsx = mms.fit_transform(x)"
    ]
   },
   {
@@ -976,8 +1010,29 @@
    "id": "cf15da19-0e6e-4db9-b1c6-e59772b29031",
    "metadata": {},
    "source": [
-    "###### 正規化の確認\n",
-    "..."
+    "###### 正規化の確認"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba27faa0-0eaf-4914-98f8-06f508c64985",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 平均が0-1の間に。\n",
+    "print(mmsx.mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4924da5f-f0e1-451f-ae0f-552f6c894834",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 標準偏差は\n",
+    "print(mmsx.std())"
    ]
   },
   {
