--- a/Notebook/Jupyter/path/ScikitLearnTraining5.ipynb
+++ b/Notebook/Jupyter/path/ScikitLearnTraining5.ipynb
@@ -14,10 +14,14 @@
     "  - [インポート](#インポート)\n",
     "  - [共通関数定義](#共通関数定義)\n",
     "- [性能の評価](#性能の評価)\n",
-    "  - [回帰問題の性能の評価](#回帰問題の性能の評価)\n",
-    "  - [分類問題の性能の評価](#分類問題の性能の評価)\n",
+    "  - [回帰問題](#回帰問題)\n",
+    "  - [分類問題](#分類問題)\n",
     "- [汎化性能の評価](#汎化性能の評価)\n",
+    "  - [k分割交差検証法](#k分割交差検証法)\n",
+    "  - [層化k分割交差検証法](#層化k分割交差検証法)\n",
     "- [チューニング](#チューニング)\n",
+    "  - [グリッドサーチ](#グリッドサーチ)\n",
+    "  - [特徴量の選択とエンジニアリング](#特徴量の選択とエンジニアリング)\n",
     "\n",
     "## 参考\n",
     "開発基盤部会 Wiki\n",
@@ -203,7 +207,7 @@
    "id": "1d40645d-a7a4-4ef7-a73f-18487a1877d6",
    "metadata": {},
    "source": [
-    "## 回帰問題の性能の評価"
+    "## 回帰問題"
    ]
   },
   {
@@ -212,8 +216,8 @@
    "metadata": {},
    "source": [
     "### 誤差による評価指標＆関数\n",
-    "- 平均二乗誤差（MSE：Mean Squared Error）, 誤差の標準偏差（RMSE : Root Mean Squared Error）\n",
-    "- 参考：[単回帰、重回帰分析](ScikitLearnTraining1.ipynb), [多項式回帰、正則化回帰分析](ScikitLearnTraining2.ipynb)"
+    "- 平均二乗誤差（MSE：Mean Squared Error）、誤差の標準偏差（RMSE : Root Mean Squared Error）\n",
+    "- 参考：[単回帰、重回帰分析](ScikitLearnTraining1.ipynb)、[多項式回帰、正則化回帰分析](ScikitLearnTraining2.ipynb)"
    ]
   },
   {
@@ -222,7 +226,7 @@
    "metadata": {},
    "source": [
     "### 残差プロット\n",
-    "参考：[単回帰、重回帰分析](ScikitLearnTraining1.ipynb), [多項式回帰、正則化回帰分析](ScikitLearnTraining2.ipynb)"
+    "参考：[単回帰、重回帰分析](ScikitLearnTraining1.ipynb)、[多項式回帰、正則化回帰分析](ScikitLearnTraining2.ipynb)"
    ]
   },
   {
@@ -232,7 +236,7 @@
     "tags": []
    },
    "source": [
-    "## 分類問題の性能の評価\n",
+    "## 分類問題\n",
     "[分類問題のデータとアルゴリズム](ScikitLearnTraining3.ipynb)を使用。"
    ]
   },
