--- a/Notebook/Jupyter/path/TableOfContents.ipynb
+++ b/Notebook/Jupyter/path/TableOfContents.ipynb
@@ -155,7 +155,7 @@
    "metadata": {},
    "source": [
     "#### [多項式回帰、正則化回帰分析](ScikitLearnTraining2.ipynb)\n",
-    "- 多項式回帰\n",
+    "- 多項式回帰分析\n",
     "- 正則化回帰分析"
    ]
   },
@@ -245,7 +245,12 @@
    "metadata": {},
    "source": [
     "##### [MINST推論と学習](KasagoDL2.ipynb)\n",
-    "（ディープ）ニューラルネットワークでMINSTの画像認識の推論と学習を行う。"
+    "（ディープ）ニューラルネットワークでMINSTの画像認識の\n",
+    "\n",
+    "- 調整済みの重みを使用した推論と\n",
+    "- 数値微分＋勾配降下法による学習を\n",
+    "\n",
+    "行う。"
    ]
   },
   {
@@ -254,8 +259,7 @@
    "metadata": {},
    "source": [
     "##### [MINST学習（誤差逆伝播）](KasagoDL3.ipynb)\n",
-    "（ディープ）ニューラルネットワークでMINSTの画像認識の学習を、  \n",
-    "誤差逆伝播（バックプロパゲーション）で行う。"
+    "（ディープ）ニューラルネットワークでMINSTの画像認識の学習を、誤差逆伝播（バックプロパゲーション）で行う。"
    ]
   },
   {
