--- a/Notebook/Jupyter/path/TensorFlowAndKeras0.ipynb
+++ b/Notebook/Jupyter/path/TensorFlowAndKeras0.ipynb
@@ -151,7 +151,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install tensorflow-gpu"
+    "#!pip install tensorflow-gpu"
    ]
   },
   {
@@ -161,8 +161,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tensorflow.python.client import device_lib\n",
-    "device_lib.list_local_devices()"
+    "#from tensorflow.python.client import device_lib\n",
+    "#device_lib.list_local_devices()"
    ]
   },
   {
@@ -172,9 +172,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import tensorflow as tf\n",
-    "#tf.test.is_gpu_available()\n",
-    "tf.config.list_physical_devices('GPU')"
+    "#import tensorflow as tf\n",
+    "##tf.test.is_gpu_available()\n",
+    "#tf.config.list_physical_devices('GPU')"
    ]
   },
   {
