--- a/Notebook/Jupyter/path/TensorFlowAndKeras1.ipynb
+++ b/Notebook/Jupyter/path/TensorFlowAndKeras1.ipynb
@@ -523,10 +523,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4b2c50e3-b96e-46d9-8697-586fa2acd1c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sklearnで\n",
+    "from sklearn.metrics import mean_squared_error as mse\n",
+    "\n",
+    "train_mse = mse(y_train, model.predict(x_train))\n",
+    "test_mse = mse(y_test, model.predict(x_test))\n",
+    "\n",
+    "print('train_mse: %.3f' % train_mse)\n",
+    "print('test_mse: %.3f' % test_mse)\n",
+    "print('train_rmse: %.3f' % (train_mse ** (1/2)))\n",
+    "print('test_rmse : %.3f' % (test_mse ** (1/2)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "4b536ff5-4398-4009-bd63-4a641710763d",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# metricsで\n",
     "print(model.metrics_names)"
    ]
   },
@@ -538,8 +558,9 @@
    "outputs": [],
    "source": [
     "score = model.evaluate(x, y_org, verbose=0)\n",
-    "print('loss:', score[0])\n",
-    "print('mae:', score[1])"
+    "print('mse:', score[0])\n",
+    "print('mae:', score[1])\n",
+    "print('rmae:', (score[0] ** (1/2)))"
    ]
   },
   {
@@ -550,8 +571,9 @@
    "outputs": [],
    "source": [
     "train_score = model.evaluate(x_train, y_train, verbose=0)\n",
-    "print('Train loss:', train_score[0])\n",
-    "print('Train mae:', train_score[1])"
+    "print('Train mse:', train_score[0])\n",
+    "print('Train mae:', train_score[1])\n",
+    "print('Train rmae:', (train_score[0] ** (1/2)))"
    ]
   },
   {
@@ -562,8 +584,9 @@
    "outputs": [],
    "source": [
     "test_score = model.evaluate(x_test, y_test, verbose=0)\n",
-    "print('Test loss:', test_score[0])\n",
-    "print('Test mae:', test_score[1])"
+    "print('Test mse:', test_score[0])\n",
+    "print('Test mae:', test_score[1])\n",
+    "print('Test rmae:', (test_score[0] ** (1/2)))"
    ]
   },
   {
