--- a/Notebook/Jupyter/path/KasagoDL2.ipynb
+++ b/Notebook/Jupyter/path/KasagoDL2.ipynb
@@ -386,7 +386,8 @@
    "id": "bf96086f-1eb7-41cc-9e16-ff3afc546bab",
    "metadata": {},
    "source": [
-    "###### OneHot"
+    "###### OneHot\n",
+    "教師データがOneHotエンコーディングされている場合。"
    ]
   },
   {
@@ -425,7 +426,8 @@
    "id": "5872b53b-3e93-4c7a-95bf-4ee2791e60c0",
    "metadata": {},
    "source": [
-    "###### OneHotでない"
+    "###### OneHotでない\n",
+    "教師データがOneHotエンコーディングされていない場合。"
    ]
   },
   {
