--- a/Notebook/Jupyter/path/MatplotlibTraining.ipynb
+++ b/Notebook/Jupyter/path/MatplotlibTraining.ipynb
@@ -247,13 +247,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = np.random.normal(70, 10, 1000) # 平均70・標準偏差10のデータ1000個"
+    "x = np.random.normal(70, 10, 1000) # 平均70・標準偏差10のデータ1000個\n",
+    "x"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "27243bf4-016e-451c-bf8a-f8b6e6df05ea",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "##### 階層別表示の例"
    ]
@@ -266,24 +269,31 @@
    "outputs": [],
    "source": [
     "y=[0,1,2]\n",
+    "\n",
     "# valのベクトルを生成し、ｎ行１列の２次元配列（行列）化\n",
     "y[0]=np.random.normal(50, 10, 1000).reshape(-1, 1) # 平均50・標準偏差10のデータ1000個\n",
     "y[1]=np.random.normal(150, 20, 1000).reshape(-1, 1) # 平均150・標準偏差20のデータ1000個\n",
     "y[2]=np.random.normal(100, 30, 1000).reshape(-1, 1) # 平均100・標準偏差30のデータ1000個\n",
+    "\n",
     "# clsのベクトルを生成し、ｎ行１列の２次元配列（行列）化して、valとclsを結合（ｎ行２列の２次元配列（行列）\n",
     "y[0]=np.hstack([y[0], np.full(1000, 0).reshape(-1, 1)])\n",
     "y[1]=np.hstack([y[1], np.full(1000, 1).reshape(-1, 1)])\n",
     "y[2]=np.hstack([y[2], np.full(1000, 2).reshape(-1, 1)])\n",
+    "\n",
     "# numpy.ndarray（行列）をDataFrame化\n",
     "y[0]=pd.DataFrame(y[0],columns=['val','cls'])\n",
     "y[1]=pd.DataFrame(y[1],columns=['val','cls'])\n",
     "y[2]=pd.DataFrame(y[2],columns=['val','cls'])\n",
+    "\n",
     "# ３つのclsのDataFrameを結合\n",
     "df=y[0]\n",
     "df=pd.concat([df,y[1]],axis=0)\n",
     "df=pd.concat([df,y[2]],axis=0)\n",
+    "\n",
     "# インデックス再設定\n",
-    "df.index=np.arange(len(df))"
+    "df.index=np.arange(len(df))\n",
+    "\n",
+    "df"
    ]
   },
   {
