--- a/Notebook/Jupyter/path/NumPyTraining2.ipynb
+++ b/Notebook/Jupyter/path/NumPyTraining2.ipynb
@@ -1088,7 +1088,10 @@
    },
    "source": [
     "### 計算方法 \n",
-    "[要素ごとの掛け算](#要素ごとの掛け算)でないことに注意。"
+    "- [要素ごとの掛け算](#要素ごとの掛け算)でないことに注意。\n",
+    "- Ａ行列 * Ｂ行列 = Ｃ行列\n",
+    "  - Ａ行列の列数とＢ行列の行数が一致ししている必要がある。\n",
+    "  - 計算後のＣ行列は、Ａ行列の行数 * Ｂ行列の列数の行列になる。"
    ]
   },
   {
@@ -1129,7 +1132,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "b@d"
+    "b@d # 行列と配列は列数一致で行数の配列になる。"
    ]
   },
   {
@@ -1179,7 +1182,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.dot(b,d)"
+    "np.dot(b,d) # 行列と配列は列数一致で行数の配列になる。"
    ]
   },
   {
