--- a/Notebook/Jupyter/path/NumPyTraining3.ipynb
+++ b/Notebook/Jupyter/path/NumPyTraining3.ipynb
@@ -253,6 +253,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7b81573-9eba-4106-b51c-526a9d9f2cfe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y=b.tolist()\n",
+    "print(type(y))\n",
+    "print(y)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "b623f9ec-8b4d-45f5-bccd-201ef62b503c",
    "metadata": {
@@ -700,7 +712,6 @@
    "cell_type": "markdown",
    "id": "f54bf1c2-fe01-4c4c-a2e4-551b5e527076",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -930,25 +941,7 @@
    "id": "d62908a5-bf55-4f10-ad65-23685fbce15b",
    "metadata": {},
    "source": [
-    "##### 既定は、0, 1, 2, 3..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "55fa103a-6247-4ba4-a980-926e49977ec4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a.transpose([0, 1])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e394f2fe-34a3-4265-80da-24c5648490d3",
-   "metadata": {},
-   "source": [
-    "##### 入れ替えなので転置と同じ"
+    "##### 既定は、n, ..., 3, 2, 1, 0"
    ]
   },
   {
@@ -959,6 +952,24 @@
    "outputs": [],
    "source": [
     "a.transpose([1, 0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e394f2fe-34a3-4265-80da-24c5648490d3",
+   "metadata": {},
+   "source": [
+    "##### 逆順に入れ替えると変化なし"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "55fa103a-6247-4ba4-a980-926e49977ec4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a.transpose([0, 1])"
    ]
   },
   {
@@ -985,25 +996,7 @@
    "id": "62d270ed-6b2f-462d-8ffc-3d718e911c71",
    "metadata": {},
    "source": [
-    "##### 既定は、0, 1, 2, 3..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2b4ebe56-7b81-4c2c-b0e5-8e5aae25d1f0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a.transpose([0,1,2])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e5c01487-50b6-468b-8156-43960b66e01c",
-   "metadata": {},
-   "source": [
-    "##### 入れ替え（逆順"
+    "##### 既定は、n, ..., 3, 2, 1, 0"
    ]
   },
   {
@@ -1014,6 +1007,24 @@
    "outputs": [],
    "source": [
     "a.transpose([2,1,0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e5c01487-50b6-468b-8156-43960b66e01c",
+   "metadata": {},
+   "source": [
+    "##### 逆順に入れ替えると変化なし"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b4ebe56-7b81-4c2c-b0e5-8e5aae25d1f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a.transpose([0,1,2])"
    ]
   },
   {
@@ -1230,6 +1241,14 @@
     "c=b.argmax(axis=1)\n",
     "c"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a13fd39d-3830-4709-999e-583e2c108e6e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
