--- a/Notebook/Jupyter/path/PandasTraining.ipynb
+++ b/Notebook/Jupyter/path/PandasTraining.ipynb
@@ -394,7 +394,8 @@
     "tags": []
    },
    "source": [
-    "#### 辞書型から"
+    "#### 辞書型から\n",
+    "列名と列配列から"
    ]
   },
   {
@@ -413,6 +414,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cfa2e8a7-1e25-4f4b-beac-8a4859486bbb",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "#### NumPyから_\n",
+    "NumPyの行列（２次配列）から"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e8a72d1-fe29-4bfa-b62c-2f32a4496cd4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np_arr=np.array([\n",
+    "    ['aaa', 'bbb', 'ccc', 'ddd', 'eee', 'fff'],  # 長さ: 6\n",
+    "    [20, 34, 50, 12, 62, 22],                    # 長さ: 6\n",
+    "    ['AAA', 'BBB', 'CCC', 'DDD', 'EEE', 'FFF']]) # 長さ: 6\n",
+    "df=pd.DataFrame(np_arr.T,columns=['xxx', 'yyy', 'zzz']) # 転置させるポイント\n",
+    "df"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "6f2001e3-6571-481d-b61d-9d3265723ee7",
@@ -421,17 +448,6 @@
    "source": [
     "# ファイル保存\n",
     "df.to_csv('temp.csv')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "cfa2e8a7-1e25-4f4b-beac-8a4859486bbb",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "#### NumPyから\n",
-    "NumPyの行列（２次配列）から → [NP ⇔ DF型変換](#NP-⇔-DF型変換)"
    ]
   },
   {
@@ -594,7 +610,12 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1a074a57-42db-4c0f-8f4e-730a7d75cb8f",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "df = pd.read_excel(io.BytesIO(res.content), engine='openpyxl')\n",
@@ -1191,10 +1212,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "81049cce-f8be-4faa-9358-75a8c1d81f32",
+   "metadata": {},
+   "source": [
+    "#### 追加"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8fe3bcc3-92cb-4263-b636-1733492b8ca1",
    "metadata": {},
    "source": [
-    "#### 行追加"
+    "##### 行追加"
    ]
   },
   {
@@ -1202,7 +1231,7 @@
    "id": "322e5de2-c4b7-4553-9fdb-a812a6da5b12",
    "metadata": {},
    "source": [
-    "##### concatを使った例"
+    "###### concatを使った例"
    ]
   },
   {
@@ -1225,7 +1254,7 @@
    "id": "f47340de-a9b5-419f-bb7f-6360003dc9b3",
    "metadata": {},
    "source": [
-    "##### インデックス再設定"
+    "###### インデックス再設定"
    ]
   },
   {
@@ -1244,7 +1273,7 @@
    "id": "af404118-5ea2-4a83-b301-3ca74be7d082",
    "metadata": {},
    "source": [
-    "#### 行追加"
+    "##### 列追加"
    ]
   },
   {
@@ -1252,7 +1281,7 @@
    "id": "8561d362-e3b8-4cd9-941e-8ea6879695ea",
    "metadata": {},
    "source": [
-    "##### 簡単な例"
+    "###### 簡単な例"
    ]
   },
   {
@@ -1271,7 +1300,7 @@
    "id": "ab920bfd-eef3-41c5-b2c1-80ea7328368f",
    "metadata": {},
    "source": [
-    "##### concatを使った例"
+    "###### concatを使った例"
    ]
   },
   {
@@ -1288,10 +1317,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "84159636-2f96-4f52-83aa-52b8f495341f",
+   "metadata": {},
+   "source": [
+    "#### 削除"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "abe088d7-e4ce-45bd-919b-60189f0d2a99",
    "metadata": {},
    "source": [
-    "#### 行削除"
+    "##### 行削除"
    ]
   },
   {
@@ -1310,7 +1347,7 @@
    "id": "db7e6d82-3fe6-4c35-8ebb-f5223ad49885",
    "metadata": {},
    "source": [
-    "#### 列削除"
+    "##### 列削除"
    ]
   },
   {
@@ -1518,19 +1555,8 @@
    "id": "f8311ad9-d98d-491a-99f0-c0aa983426ec",
    "metadata": {},
    "source": [
-    "##### NP → DF "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5581f981-75f1-43a8-bdfb-b775f498974a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np_arr=np.array([[1,2,3],[4,5,6]])\n",
-    "df=pd.DataFrame(np_arr,columns=['a','b','c'])\n",
-    "df"
+    "##### NP → DF\n",
+    "[NumPyから](#NumPyから_)"
    ]
   },
   {
