--- a/Notebook/Jupyter/path/PythonTraining.ipynb
+++ b/Notebook/Jupyter/path/PythonTraining.ipynb
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "id": "bac6e370-ecb2-4d10-a9a2-f918469a87cd",
    "metadata": {},
    "outputs": [
@@ -810,7 +810,9 @@
   {
    "cell_type": "markdown",
    "id": "eb463fbc-6076-474f-8ce1-2f95e708fdaa",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "###### 四則演算"
    ]
@@ -822,7 +824,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 割愛"
+    "1+2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff0401db-b6e7-4055-aea1-14c4e5e4bcb8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "1-2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bab2e2f4-0982-4479-bbee-e70b9ae08018",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "1*2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14ca14f3-4baa-4fa6-8464-ef63cadd46f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "1/2"
    ]
   },
   {
@@ -1172,9 +1204,97 @@
   },
   {
    "cell_type": "markdown",
+   "id": "eb753a34-1dc9-4633-864f-488ff9c42d20",
+   "metadata": {},
+   "source": [
+    "##### 辞書\n",
+    "- キー＆バリュー（C#のDictionaryに近い）\n",
+    "- 定義は角括弧・丸括弧ではなく中括弧（{}）を使う。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24a112bd-1d51-4c28-b7b6-0ee0f9c29d10",
+   "metadata": {},
+   "source": [
+    "###### 定義"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c3b14218-da20-4da6-93c1-7e409ac24fa0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hogehoge = {'aaa':'AAA', 'bbb':'BBB', 'ccc':'CCC', 'ddd':'DDD'}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "91ffcb59-2e25-4168-9bf4-3641d68394d8",
+   "metadata": {},
+   "source": [
+    "###### インデックス"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70d6e04f-1bd6-4c25-9569-3e133a897155",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hogehoge['bbb']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1bb7d2d0-f32d-46c5-a702-4629bb16b4b1",
+   "metadata": {},
+   "source": [
+    "###### メソッド"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c75bf29f-c50b-415b-8c3a-e8289bf81a45",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 追加\n",
+    "hogehoge.update({'eee':'EEE'})\n",
+    "print(hogehoge)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce55b903-1d17-4606-8263-836f2f7d993d",
+   "metadata": {},
+   "source": [
+    "###### 文とか関数とか"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "005cefbd-16b3-432a-bbc0-84606c5d9479",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# del文\n",
+    "del hogehoge['ccc']\n",
+    "print(hogehoge)\n",
+    "\n",
+    "# len関数\n",
+    "print(len(hogehoge))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3fbf0218-618c-46cc-bfd0-08a76dd40bd5",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -1184,9 +1304,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e7ab8dc0-a274-4bed-b934-c34448bb1c53",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list_values = [1, 2, 3]  # リスト\n",
+    "tuple_values = (1, 2, 3) # タプル\n",
+    "print(list_values)\n",
+    "print(tuple_values)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "d204002b-82f6-4f7e-90fb-b4e44d14f969",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "##### 集合\n",
     "- 要素を順番や重複を考えない（C#のListに近い）\n",
@@ -1194,13 +1329,20 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "eb753a34-1dc9-4633-864f-488ff9c42d20",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a451ab94-d8bb-4c47-9736-4ecf9f53d19c",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "##### 辞書\n",
-    "- キー＆バリュー（C#のDictionaryに近い）\n",
-    "- 定義は角括弧・丸括弧ではなく中括弧（{}）を使う。"
+    "s = {1, 2, 2, 3, 1, 4}\n",
+    "print(s)\n",
+    "print(type(s))\n",
+    "\n",
+    "l = [1, 2, 2, 3, 1, 4]\n",
+    "sl = set(l)\n",
+    "print(sl)\n",
+    "print(type(sl))"
    ]
   },
   {
@@ -1691,21 +1833,18 @@
     "可変長引数の後ろはキーワード引数のみ利用可能。\n",
     "\n",
     "- 関数中でタプルとして機能\n",
-    "  - 定義\n",
     "```python\n",
+    "# 定義  \n",
     "def 関数名(*Tuple):\n",
-    "```\n",
-    "  - 実行\n",
-    "```python\n",
+    "# 実行  \n",
     "関数名(1, 2, 3, 4, 5, 6, 7, 8)\n",
     "```\n",
+    "\n",
     "- 関数中で辞書として機能（仮引数名がキー\n",
-    "  - 定義\n",
     "```python\n",
+    "# 定義  \n",
     "def 関数名(**Dictionary):\n",
-    "```\n",
-    "  - 実行\n",
-    "```python\n",
+    "# 実行  \n",
     "関数名(key1=1, key2=2, key3=3):\n",
     "```"
    ]
@@ -1865,6 +2004,14 @@
     "m.hello()\n",
     "m.goodbye()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "afa3acd4-12dd-49e5-94b7-1b849b8c858d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1883,7 +2030,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
