--- a/Notebook/Jupyter/path/ScikitLearnTraining0.ipynb
+++ b/Notebook/Jupyter/path/ScikitLearnTraining0.ipynb
@@ -317,6 +317,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cbdaa83d-16c6-4df7-89f9-11a43b92983a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 相関係数\n",
+    "coef"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "5f28c942-0673-48de-afe0-c67ae13b7dff",
    "metadata": {},
@@ -396,6 +407,21 @@
     "\n",
     "# 散布\n",
     "cluster_plot(3, x, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb996ab8-01e7-4df4-b52e-c74697edd2f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sns.pairplotで\n",
+    "df1=pd.DataFrame(x,columns=['x1','x2'])\n",
+    "df2=pd.DataFrame(y,columns=['y'])\n",
+    "df=pd.concat([df1,df2],axis=1)\n",
+    "sns.pairplot(df, hue='y')\n",
+    "plt.show()"
    ]
   },
   {
@@ -818,17 +844,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9470e3a2-3d44-4768-8796-046838f16b48",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = np.array(df2.loc[:, ['alcohol']])\n",
-    "y = np.array(df2.loc[:, ['quality']])"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "98eadfc6-bc4e-46a7-ae18-733865c7ff0c",
    "metadata": {},
@@ -899,6 +914,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f27cd183-8f2e-4c02-8d51-88d536f6d3bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x=x1\n",
+    "y=y1"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "8d21ef0b-a314-45e2-a5b5-b373f4708bf9",
    "metadata": {
@@ -955,14 +981,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "46711336-636d-4949-b869-e503482247b5",
-   "metadata": {},
-   "source": [
-    "###### 標準化の確認"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "77caf3d2-bb1a-41a1-80e4-899d3e20222e",
@@ -1003,14 +1021,6 @@
     "mms = MinMaxScaler(feature_range=(0, 1))\n",
     "# 引数は numpy.ndarray\n",
     "mmsx = mms.fit_transform(x)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "cf15da19-0e6e-4db9-b1c6-e59772b29031",
-   "metadata": {},
-   "source": [
-    "###### 正規化の確認"
    ]
   },
   {
@@ -1104,7 +1114,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
