--- a/Notebook/Jupyter/path/ScikitLearnTraining4.ipynb
+++ b/Notebook/Jupyter/path/ScikitLearnTraining4.ipynb
@@ -217,6 +217,8 @@
     "\n",
     "# PetalLengthCm, PetalWidthCm列の選択\n",
     "# x=np_arr[:n, 2:4] \n",
+    "\n",
+    "# 全列選択\n",
     "x=np_arr[:n, 0:4] \n",
     "\n",
     "# Species列の選択\n",
@@ -267,7 +269,9 @@
    "id": "195d0b2f-0d79-498b-a156-dc7e67c76059",
    "metadata": {},
    "source": [
-    "## モデル・アルゴリズム"
+    "## モデル・アルゴリズム\n",
+    "主成分分析をクラスタ分析と組み合わせ、  \n",
+    "高次の次元で定義されたデータを2次元空間データで表現"
    ]
   },
   {
@@ -769,9 +773,9 @@
     "    # 良く解らんが、distortion = cluster inertia = SSEらしい。\n",
     "\n",
     "# 結果をグラフに出力\n",
-    "plt.plot(range(1,11), distortions,marker='o')\n",
+    "plt.plot(range(1,11), distortions, marker='o')\n",
     "plt.xlabel('Number of clusters')\n",
-    "plt.ylabel('Distortion')\n",
+    "plt.ylabel('Distortion (SSE)')\n",
     "plt.show()"
    ]
   },
