--- a/Notebook/Jupyter/path/ScikitLearnTraining5.ipynb
+++ b/Notebook/Jupyter/path/ScikitLearnTraining5.ipynb
@@ -1306,7 +1306,8 @@
    "metadata": {},
    "source": [
     "#### 特徴量の選択\n",
-    "- [散布図行列で特徴量を選択](ScikitLearnTraining0.ipynb)\n",
+    "- [相関行列・ヒートマップで特徴量を選択（回帰）](ScikitLearnTraining0.ipynb)\n",
+    "- [散布図行列で特徴量を選択（回帰・分類）](ScikitLearnTraining0.ipynb)\n",
     "- アルゴリズムで評価\n",
     "  - 回帰：[重回帰でデータの標準化を施してあれば、偏回帰係数を参考にできる](ScikitLearnTraining1.ipynb)\n",
     "  - 分類：[RandomForestClassifierの機能で各特徴量の重要度を出力できる](ScikitLearnTraining3.ipynb)"
@@ -1357,7 +1358,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
