--- a/Notebook/Jupyter/path/MatplotlibTraining.ipynb
+++ b/Notebook/Jupyter/path/MatplotlibTraining.ipynb
@@ -13,12 +13,14 @@
     "  - [インポート](#インポート)\n",
     "  - [jupyter上で利用するとき](#jupyter上で利用するとき)\n",
     "- [表示](#表示)\n",
-    "  - [画像の表示](#画像の表示)\n",
-    "  - [ヒストグラム](#ヒストグラム)\n",
-    "  - [パレート図](#パレート図)\n",
-    "  - [散布図](#散布図)\n",
-    "  - [散布図行列](#散布図行列)\n",
-    "  - [ヒートマップ](#ヒートマップ)\n",
+    "  - [基本的な図](#基本的な図)\n",
+    "    - [画像の表示](#画像の表示)\n",
+    "    - [ヒストグラム](#ヒストグラム)\n",
+    "    - [パレート図](#パレート図)\n",
+    "    - [散布図](#散布図)\n",
+    "  - [相関関係を把握する図](#相関関係を把握する図)\n",
+    "    - [散布図行列](#散布図行列)\n",
+    "    - [ヒートマップ](#ヒートマップ)\n",
     "  - [2次元プロット](#2次元のプロット)\n",
     "    - [3次関数グラフ](#3次関数グラフ)\n",
     "    - [3角関数グラフ](#3角関数グラフ)\n",
@@ -214,12 +216,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3c1b0513-0a5d-4f21-a37a-2cbcf2baa8ea",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### 基本的な図 "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f7225257-fee4-4cea-b644-35515a1d40b4",
    "metadata": {
     "tags": []
    },
    "source": [
-    "### ヒストグラム"
+    "#### ヒストグラム"
    ]
   },
   {
@@ -229,7 +241,7 @@
     "tags": []
    },
    "source": [
-    "#### データの生成"
+    "##### データの生成"
    ]
   },
   {
@@ -237,7 +249,7 @@
    "id": "62fb108b-a252-4018-8286-69d5943e4780",
    "metadata": {},
    "source": [
-    "##### 最も単純な例"
+    "###### 最も単純な例"
    ]
   },
   {
@@ -258,7 +270,7 @@
     "tags": []
    },
    "source": [
-    "##### 階層別表示の例"
+    "###### 階層別表示の例"
    ]
   },
   {
@@ -303,7 +315,7 @@
     "tags": []
    },
    "source": [
-    "#### データの可視化"
+    "##### データの可視化"
    ]
   },
   {
@@ -311,15 +323,7 @@
    "id": "b5c4607a-1861-432e-b7f8-9a8816b7ca25",
    "metadata": {},
    "source": [
-    "##### 最も単純な例"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e67e1c4b-8bb9-49a2-9b48-8a4010097cbf",
-   "metadata": {},
-   "source": [
-    "###### binsの自動算出"
+    "###### 最も単純な例"
    ]
   },
   {
@@ -329,20 +333,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# binsの自動算出\n",
     "plt.hist(x)\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "fdcfcac4-b09e-4fc8-92d3-d91ddf33ec11",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "###### 最適なbinsを算出\n",
-    "- bins : ビン (表示する棒) の数\n",
-    "- スタージェスの公式（1+log2n）を基に最適なbinsを算出"
    ]
   },
   {
@@ -352,6 +345,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 最適なbinsを算出\n",
+    "# - bins : ビン (表示する棒) の数\n",
+    "# - スタージェスの公式（1+log2n）を基に最適なbinsを算出\n",
     "import math\n",
     "bins = math.log(len(x), 2) + 1\n",
     "plt.hist(x, bins=round(bins))\n",
@@ -363,7 +359,7 @@
    "id": "5ad7b677-dbf2-4ac8-8026-fa8c39df0d45",
    "metadata": {},
    "source": [
-    "##### 階層別表示の例\n",
+    "###### 階層別表示の例\n",
     "cls列の値（階層）毎にグループ分けしてval値をヒストグラムで可視化"
    ]
   },
@@ -387,7 +383,7 @@
     "tags": []
    },
    "source": [
-    "### パレート図\n",
+    "#### パレート図\n",
     "結構手数が要る。"
    ]
   },
@@ -398,7 +394,7 @@
     "tags": []
    },
    "source": [
-    "### 散布図"
+    "#### 散布図"
    ]
   },
   {
@@ -406,7 +402,7 @@
    "id": "f2495210-2d42-4543-8f62-4276113023aa",
    "metadata": {},
    "source": [
-    "#### データの生成\n",
+    "##### データの生成\n",
     "線形単回帰している風のデータを生成する。"
    ]
   },
@@ -415,7 +411,7 @@
    "id": "3f4549a6-499a-41fe-b567-b22a5a4f6696",
    "metadata": {},
    "source": [
-    "##### データ１"
+    "###### データ１"
    ]
   },
   {
@@ -435,7 +431,7 @@
    "id": "e49e3523-2f81-4ec0-a2d3-0ef8a1e8b55b",
    "metadata": {},
    "source": [
-    "##### データ２\n",
+    "###### データ２\n",
     "より、相関係数が大きい感じのデータ。"
    ]
   },
@@ -456,7 +452,7 @@
    "id": "05e1ec8c-e9b6-4155-950f-4069b5b3744d",
    "metadata": {},
    "source": [
-    "#### データの可視化"
+    "##### データの可視化"
    ]
   },
   {
@@ -464,15 +460,7 @@
    "id": "f6bc365b-2abd-44d5-a4e7-dfed43a0abf5",
    "metadata": {},
    "source": [
-    "##### scatterメソッド"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "667b2995-61c0-4dc6-8c9b-9ceffb9dd629",
-   "metadata": {},
-   "source": [
-    "###### データ１"
+    "###### scatterメソッド"
    ]
   },
   {
@@ -482,16 +470,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# データ１\n",
     "plt.scatter(x1,y1)\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "efe07185-1315-407d-8e99-cdf132838895",
-   "metadata": {},
-   "source": [
-    "###### データ２"
    ]
   },
   {
@@ -501,6 +482,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# データ２\n",
     "plt.scatter(x2,y2)\n",
     "plt.show()"
    ]
@@ -510,15 +492,7 @@
    "id": "72ce8793-c792-422e-a454-b19563191c9a",
    "metadata": {},
    "source": [
-    "##### scatterメソッドのオプション"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "301865fa-b599-4741-9cfe-3004dbe8acbb",
-   "metadata": {},
-   "source": [
-    "###### １つのデータ群"
+    "###### scatterメソッドのオプション"
    ]
   },
   {
@@ -528,6 +502,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# １つのデータ群\n",
     "# 最も単純な例\n",
     "plt.scatter(x1,y1)\n",
     "plt.show()"
@@ -540,6 +515,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# １つのデータ群\n",
     "# 修飾を加えた例\n",
     "## データ１\n",
     "plt.scatter(x1,y1)\n",
@@ -559,6 +535,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# １つのデータ群\n",
     "# 修飾を加えた例\n",
     "## データ２\n",
     "plt.scatter(x2,y2)\n",
@@ -572,20 +549,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "13fcf60d-278e-44f7-885b-4f672d60598a",
-   "metadata": {},
-   "source": [
-    "###### ２つのデータ群"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "c4448acc-b66f-48c6-b1a1-f01391f16874",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# ２つのデータ群\n",
     "plt.scatter(x1,y1,color='red',marker='x',label='data1')\n",
     "plt.scatter(x2,y2,color='blue',marker='+',label='data2')\n",
     "plt.title('title') # グラフのタイトル\n",
@@ -599,12 +569,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3e45aee2-0686-4eb8-8c47-2c4474f4f3b5",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### 相関関係を把握する図"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "09d634d7-db4a-4e79-bccc-8b4c94ee7ae9",
    "metadata": {
     "tags": []
    },
    "source": [
-    "### 散布図行列\n",
+    "#### 散布図行列\n",
     "matplotlibラッパであるseabornを使って、  \n",
     "表の全ペアのヒストグラムと散布図を表示。  \n",
     "（dfは数値表として初期化されたDataFrame）"
@@ -615,7 +595,7 @@
    "id": "b2fd9c96-1113-4ba3-a395-646575a2e7c3",
    "metadata": {},
    "source": [
-    "#### データの生成"
+    "##### データの生成"
    ]
   },
   {
@@ -623,7 +603,7 @@
    "id": "2bf6d6d2-8595-46d0-93e8-ccfc96deb502",
    "metadata": {},
    "source": [
-    "##### 準備\n",
+    "###### 準備\n",
     "scikit-learnのデータセットを使う"
    ]
   },
@@ -642,7 +622,7 @@
    "id": "92692a41-c330-49f8-b234-c715a4ccd776",
    "metadata": {},
    "source": [
-    "##### 生成"
+    "###### 生成"
    ]
   },
   {
@@ -665,7 +645,7 @@
    "id": "1576bf92-b060-482a-9c0b-a9db3038d306",
    "metadata": {},
    "source": [
-    "#### データの描画"
+    "##### データの描画"
    ]
   },
   {
@@ -675,7 +655,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.pairplot(df, height=2.0)\n",
+    "# 通常（回帰問題用\n",
+    "sns.pairplot(df)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc4f1d50-34b3-44e5-9a94-da0a8b574fc6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 通常（分類問題用\n",
+    "sns.pairplot(df, hue='species')\n",
     "plt.show()"
    ]
   },
@@ -686,7 +679,7 @@
     "tags": []
    },
    "source": [
-    "### ヒートマップ"
+    "#### ヒートマップ"
    ]
   },
   {
@@ -694,7 +687,7 @@
    "id": "573e70ea-c3ea-41ea-8ba8-7ed4ece2e37d",
    "metadata": {},
    "source": [
-    "#### データの生成"
+    "##### データの生成"
    ]
   },
   {
@@ -714,7 +707,7 @@
    "id": "29b8653b-4a53-47ca-ad16-8f6e84afd50e",
    "metadata": {},
    "source": [
-    "#### データの描画"
+    "##### データの描画"
    ]
   },
   {
@@ -1189,7 +1182,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
